--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1 class="text-center">SpringBootApp + MongoDB with Jenkins, Docker and K8S</h1>
+		<h1 class="text-center">SpringBootApp + MongoDB</h1>
 		<div class="col-md-6">
 			<form name="saveUser" action="/save" method="post"
 				class="form-horizontal">
@@ -68,15 +68,7 @@
 			<div class="col-md-3">
 				<img th:src="@{/img/logo1.png}" alt="logo1.png" height="200">
 			</div>
-			<div class="col-md-8">
-				<h4 class="text-center">Landmark Technology - Software Development & DevOps Automation.</h4>
-				<h3 class="text-center">Tel
-					+1 437-215-2483; mylandmarktech@gmail.com</h3>
-				<h5 class="text-center">
-					Copyright 2021 by <a href="http://www.mylandmarktech.com/">Landmark Technology
-						</a>
-				</h5>
-			</div>
+			
 		</div>
 
 	</div>
